--- a/research/homepage_set.css
+++ b/research/homepage_set.css
@@ -59,7 +59,7 @@ section#main {
     vertical-align: top;
 }
 /* 各级标题设置 */
-h1 {
+h1#name {
 	font-size: xx-large;
 	padding: 30px 10px 10px 10px;
 	margin-bottom: 0px;
